force-app/main/default/objects/CallDetails__c/CallDetails__c.object-meta.xml
<CustomObject>
    <description>Ameyo stores the call related detail in it</description>
    <label>CallDetail</label>
    <nameField>
        <label>CallDetails ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>