force-app/main/default/objects/CallDetails__c/fields/accountName__c.field-meta.xml
<CustomField>
    <fullName>accountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CallDetails</relationshipName>
    <type>Lookup</type>
</CustomField>