force-app/main/default/objects/CallDetails__c/fields/agentID__c.field-meta.xml
<CustomField>
    <fullName>agentID__c</fullName>
    <label>agentID</label>
    <type>TextArea</type>
</CustomField>