force-app/main/default/objects/CallDetails__c/fields/callId__c.field-meta.xml
<CustomField>
    <fullName>callId__c</fullName>
    <label>Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>