force-app/main/default/objects/CallDetails__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>