force-app/main/default/objects/CallDetails__c/fields/campaignId__c.field-meta.xml
<CustomField>
    <fullName>campaignId__c</fullName>
    <label>Campaign Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>