force-app/main/default/objects/CallDetails__c/fields/customerCRTId__c.field-meta.xml
<CustomField>
    <fullName>customerCRTId__c</fullName>
    <label>Customer CRT ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>