force-app/main/default/objects/CallDetails__c/fields/dialedNumber__c.field-meta.xml
<CustomField>
    <fullName>dialedNumber__c</fullName>
    <label>Dialed Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>