force-app/main/default/objects/CallDetails__c/fields/dispositionClass__c.field-meta.xml
<CustomField>
    <fullName>dispositionClass__c</fullName>
    <label>Disposition Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>