force-app/main/default/objects/CallDetails__c/fields/dispositionCode__c.field-meta.xml
<CustomField>
    <fullName>dispositionCode__c</fullName>
    <description>disposition code</description>
    <label>Disposition Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>