force-app/main/default/objects/CallDetails__c/fields/objectId__c.field-meta.xml
<CustomField>
    <fullName>objectId__c</fullName>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>