force-app/main/default/objects/CallDetails__c/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <label>Object Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>