force-app/main/default/objects/CallDetails__c/fields/recordingFileUrl__c.field-meta.xml
<CustomField>
    <fullName>recordingFileUrl__c</fullName>
    <label>Recording File Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>