force-app/main/default/objects/CallDetails__c/fields/sourceName__c.field-meta.xml
<CustomField>
    <fullName>sourceName__c</fullName>
    <label>sourceName</label>
    <type>TextArea</type>
</CustomField>