force-app/main/default/objects/CallDetails__c/fields/subSourceName__c.field-meta.xml
<CustomField>
    <fullName>subSourceName__c</fullName>
    <label>subSourceName</label>
    <type>TextArea</type>
</CustomField>