force-app/main/default/objects/CallDetails__c/fields/systemDisposition__c.field-meta.xml
<CustomField>
    <fullName>systemDisposition__c</fullName>
    <label>System Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>