force-app/main/default/objects/CallDetails__c/fields/talkTime__c.field-meta.xml
<CustomField>
    <fullName>talkTime__c</fullName>
    <label>talkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>