force-app/main/default/objects/CallDetails__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>